<resources>
    <string name="app_name">SeeFood</string>
    <string name="title_activity_food_list">FoodListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_trending">Trending</string>
    <string name="navigation_categories">Categories</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_view_category"> More </string>
    <string name="navigation_help">Help and Feedback</string>
    <string name="navigation_about">About</string>

    <string-array name="country_array">
        <item>Thailand</item>
        <item>Japan</item>
        <item>China</item>
    </string-array>

</resources>
