<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_trending"
            android:icon="@drawable/icon1_2"
            android:title="@string/navigation_trending" />
        <item
            android:id="@+id/navigation_categories"
            android:icon="@drawable/icon1_2"
            android:title="@string/navigation_categories" />
        <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/icon1_2"
            android:title="@string/navigation_favorites" />
    </group>

    <item
        android:id="@+id/navigation_view_category"
        android:title="@string/navigation_view_category">
        <menu>
            <item
                android:id="@+id/navigation_help"
                android:title="@string/navigation_help" />
            <item
                android:id="@+id/navigation_about"
                android:title="@string/navigation_about" />
        </menu>
    </item>
</menu>